Fix Java 21 to Java 11 compatibility - Part 1
- Converted switch expression in StepProfileBuilder.java to if-else
- Fixed pattern matching instanceof in StepTrimResolver.java
- Fixed removeLast() methods in PreviewUvMapper.java, PreviewFaceBuilder.java, StepMeshExporter.java, StepPreviewJsonExporter.java
- Fixed pattern matching instanceof in PreviewFaceBuilder.java
- Fixed ~60 pattern matching instanceof in StepPreviewJsonExporter.java

Remaining: ~109 pattern matching instanceof in StepPreviewJsonExporter.java